fix : mbti 설문 내용 조회 기능수정
1. 피부타입별 질문 조회 기능 수정
2. mbti 질문 조회 기능 수정 및 DB 추가

Resolves: #67